@@ -4704,3 +4704,8 @@ stopifnot(result$y >= 0)
 ## bw.SJ() used too small search interval in rare cases:
 bw.SJ(1:20) # error: "no solution in the specified range of bandwidths" in < 2.5.1
 ## this is not ok when called as  density(1:20, bw = "SJ")
+
+
+## hexadecimal integer constants failed on some platforms (PR#9648)
+stopifnot(identical(0x10L, 16L))
+## first was 0L on Windows in 2.5.0
